Add functions add/sub/rsub/mul/div that accept a scalar as first arg
ghstack-source-id: a047366dbfebc0142e2a81fd6cff49b9edfffe79
Pull Request resolved: https://github.com/pytorch/pytorch/pull/29602

--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -312,6 +312,16 @@
   variants: function, method
   supports_named_tensor: True
 
+- func: add.ScalarTensor(Scalar self, Tensor other, Scalar alpha=1) -> Tensor
+  use_c10_dispatcher: full
+  variants: function
+  supports_named_tensor: True
+
+- func: add.ScalarScalar(Scalar self, Scalar other, Scalar alpha=1) -> Scalar
+  use_c10_dispatcher: full
+  variants: function
+  supports_named_tensor: True
+
 - func: add_.Scalar(Tensor(a!) self, Scalar other, Scalar alpha=1) -> Tensor(a!)
   variants: method
   supports_named_tensor: True
@@ -1052,6 +1062,16 @@
 - func: div.Scalar(Tensor self, Scalar other) -> Tensor
   use_c10_dispatcher: full
   variants: function, method
+  supports_named_tensor: True
+
+- func: div.ScalarTensor(Scalar self, Tensor other) -> Tensor
+  use_c10_dispatcher: full
+  variants: function
+  supports_named_tensor: True
+
+- func: div.ScalarScalar(Scalar self, Scalar other) -> Scalar
+  use_c10_dispatcher: full
+  variants: function
   supports_named_tensor: True
 
 - func: div_.Scalar(Tensor(a!) self, Scalar other) -> Tensor(a!)
@@ -2008,6 +2028,14 @@
 - func: mul.Scalar(Tensor self, Scalar other) -> Tensor
   use_c10_dispatcher: full
   variants: function, method
+
+- func: mul.ScalarTensor(Scalar self, Tensor other) -> Tensor
+  use_c10_dispatcher: full
+  variants: function
+
+- func: mul.ScalarScalar(Scalar self, Scalar other) -> Scalar
+  use_c10_dispatcher: full
+  variants: function
 
 - func: mul_.Scalar(Tensor(a!) self, Scalar other) -> Tensor(a!)
   variants: method
@@ -3178,6 +3206,16 @@
   variants: function, method
   supports_named_tensor: True
 
+- func: sub.ScalarTensor(Scalar self, Tensor other, Scalar alpha=1) -> Tensor
+  use_c10_dispatcher: full
+  variants: function
+  supports_named_tensor: True
+
+- func: sub.ScalarScalar(Scalar self, Scalar other, Scalar alpha=1) -> Scalar
+  use_c10_dispatcher: full
+  variants: function
+  supports_named_tensor: True
+
 - func: sub_.Scalar(Tensor(a!) self, Scalar other, Scalar alpha=1) -> Tensor(a!)
   variants: method
   supports_named_tensor: True
@@ -3189,6 +3227,16 @@
 
 # For C++ only, until we have conversion from C++ numbers to Tensor
 - func: rsub.Scalar(Tensor self, Scalar other, Scalar alpha=1) -> Tensor
+  use_c10_dispatcher: full
+  variants: function
+  supports_named_tensor: True
+
+- func: rsub.ScalarTensor(Scalar self, Tensor other, Scalar alpha=1) -> Tensor
+  use_c10_dispatcher: full
+  variants: function
+  supports_named_tensor: True
+
+- func: rsub.ScalarScalar(Scalar self, Scalar other, Scalar alpha=1) -> Scalar
   use_c10_dispatcher: full
   variants: function
   supports_named_tensor: True
